// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHeaderNavigationComponent should match the snapshot, with default props 1`] = `
<div>
  <nav
    aria-label="Menu principal"
    class="fr-nav"
    id="navigation-869"
    role="navigation"
  >
    <ul
      class="fr-nav__list"
    />
  </nav>
</div>
`;

exports[`LayoutHeaderNavigationComponent should match the snapshot, with navigationItems defined 1`] = `
<div>
  <nav
    aria-label="Menu principal"
    class="fr-nav"
    id="navigation-869"
    role="navigation"
  >
    <ul
      class="fr-nav__list"
    >
      <li
        class="fr-nav__item"
      >
        <div>
          any-label-mock-1
        </div>
      </li>
      <li
        class="fr-nav__item"
      >
        <div>
          any-label-mock-2
        </div>
      </li>
    </ul>
  </nav>
</div>
`;
